# responsible-ai-audit

./: .gitignore  README.md  pyproject.toml
responsible_ai_audit/data/: get_data.py
responsible_ai_audit/data/preprocessing/: __init__.py
responsible_ai_audit/evaluate/: eval_data.py  eval_model.py  evaluate.py  load_data.py
responsible_ai_audit/evaluate/data/: all_data.csv  black_female_moderate_liberal_data.csv  white_female_conservative_data.csv  white_female_liberal_data.csv  white_male_conservative_data.csv  white_male_liberal_data.csv
responsible_ai_audit/metrics/: __init__.py
responsible_ai_audit/training/: train.py
tools/: inference.py  train.py  train.sh
