[tool.poetry]
name = "responsible-ai-audit"
version = "0.1.0"
description = ""
authors = ["lavaman131 <lavaalex3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = { extras = ["torch"], version = "^4.40.0" }
scipy = "^1.13.0"
datasets = "^2.19.0"
tqdm = "^4.66.2"
scikit-learn = "^1.4.2"
hf-transfer = "^0.1.6"
seaborn = "^0.13.2"
scienceplots = "^2.1.1"
wandb = "^0.16.6"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["responsible_ai_audit"]
